# scriptura

./: .gitignore  README.md  config.yaml  example.html  index.html  package-lock.json  package.json  pyproject.toml  report.html  requirements.txt  scriptura.py  style.css
report/: README.md
scriptura.egg-info/: PKG-INFO  SOURCES.txt
sections/: 01-introduction.html  02-methodology.html  03-results.html  04-discussion.html  05-conclusion.html  06-appendix.html  section.html
sections kopyası/: 04-discussion.html  05-conclusion.html  06-appendix.html
src/scriptura/: cli.py
src/scriptura.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/scriptura/templates/: report_wrapper.html.j2
style/: cover.css  footer.css  general.css  style.css
style kopyası/: last-page.css
