[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptura"
version = "0.1.0"
description = "Modular report builder (HTML → PDF via Paged.js)"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "pyyaml>=6.0",
  "beautifulsoup4>=4.12",
  "playwright>=1.45"
]

[project.scripts]
scriptura = "scriptura.cli:cli"

[tool.setuptools]
# SADECE src layout: paketler src/ altında
package-dir = {"" = "src"}
packages = ["scriptura"]
include-package-data = false
